# haskell-CSVDB

./: .gitignore  LICENSE  README.md  csvdb.cabal  haddock.html.url  stack.yaml  todo.txt
app/: Main.hs
src/CSVdb/: Base.hs
src/CSVdb/System/: CommandLine.hs  QProcessor.hs
src/Data/: RTable.hs
src/Data/RTable/: Etl.hs  Julius.hs
src/Obsolete/: Ralgebra.hs
