name:                csvdb
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/csvdb#readme
license:             BSD3
license-file:        LICENSE
author:              Nikos Karagiannidis
maintainer:          nkarag@gmail.com
copyright:           2017 Nikos Karagiannidis
category:            Databases
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Data.RTable, Data.RTable.Etl, CSVdb.Base, Data.RTable.Julius
  build-depends:      base >= 4.7 && < 5
                      --bytestring-0.10.8.1 -- Data.ByteString  https://www.stackage.org/haddock/lts-7.4/bytestring-0.10.8.1/Data-ByteString.html
                    , bytestring
                      --containers-0.5.7.1  -- Data.Map.Strict  https://www.stackage.org/haddock/lts-7.4/containers-0.5.7.1/Data-Map-Strict.html
                    , containers  
                    -- https://hackage.haskell.org/package/unordered-containers-0.2.7.2/docs/Data-HashMap-Strict.html  
                    , unordered-containers  
                      -- csv-conduit-0.6.6  -- Data.CSV.Conduit  https://www.stackage.org/haddock/lts-6.27/csv-conduit-0.6.6/Data-CSV-Conduit.html
                    --, csv-conduit
                      -- https://github.com/hvr/cassava  --  https://www.stackage.org/lts-7.15/package/cassava-0.4.5.1
                      , cassava
                      , vector
                      , text
                      -- https://hackage.haskell.org/package/cereal
                      , cereal
                      -- Data.Either.Combinators (https://hackage.haskell.org/package/either-4.4.1.1/docs/Data-Either-Combinators.html)
                      , either      
                    -- , simple-sql-parser    
  default-language:    Haskell2010

executable csvdb
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , csvdb
                     , unordered-containers
                     , text
                     , vector                     
  default-language:    Haskell2010

test-suite csvdb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , csvdb                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nkarag/haskell/csvdb
